--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width />
+<meta name="viewport" content="width=1200px />
 <title>Mayra Guachi - Diseñadora gráfica</title>
 
 <link rel="stylesheet" href="estilos.css">
