--- a/index.html
+++ b/index.html
@@ -1,99 +1,13 @@
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>Responsive Gallery Portfolio</title>
+        <title>Birthday Countdown</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
+        
+        <h1 id="time-left"></h1>
 
-
-        <div class="nav">
-            <ul>
-                <li class="extra-item"><a href="/">HOME</a></li>
-                <li><a href="#footer">CONTACT</a></li>
-                <li>
-                    <img class="logo" src="./images/Piggycorns Perfil Alfon 2 mod.jpg" alt="logo">
-                </li>
-                <li><a href="https://www.instagram.com/cerditosviajeros/">INSTAGRAM</a></li>
-                <li class="extra-item"><a href="https://www.facebook.com/cerditosviajerosT">FACEBOOK</a></li>
-            </ul>
-        </div>
-
-
-        <div class="hero-section">
-            <div class="row">
-                <div class="container">
-                    <img src="./images/coffee-6171744_1280.png" alt="May"/>
-                    <div class='middle' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May"/>
-                    <div class='middle' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="container">
-                    <img src="./images/Piggycorns Perfil Alfon 2 mod.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <img src="./images/IMG-20200419-WA0018.jpg" alt="May">
-                    <div class='middle ' style="background-color: lightblue">
-                        <div class="text">Sample Text</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div id="footer" class="footer">
-            <p>Puedes contactar con nosotros en piggycorns9290@gmail.com </p>
-        </div>
-
-
+        <script src="app.js"></script>
     </body>
 </html>
