--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>Birthday Countdown</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        
-        <h1 id="time-left"></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>My Fluffy Name</title>
+</head>
+<body>
+    <div class="alfon">
+        <p class="alfon-letters letter-a">A</p>
+        <p class="alfon-letters letter-l">L</p>
+        <p class="alfon-letters letter-f">F</p>
+        <p class="alfon-letters letter-o">O</p>
+        <p class="alfon-letters letter-n">N</p>
+    </div>
 
-        <script src="app.js"></script>
-    </body>
+    <div class="alfon-B">
+        <p class="alfon-letters-B letter-a-B">A</p>
+        <p class="alfon-letters-B letter-l-B">L</p>
+        <p class="alfon-letters-B letter-f-B">F</p>
+        <p class="alfon-letters-B letter-o-B">O</p>
+        <p class="alfon-letters-B letter-n-B">N</p>
+    </div>
+</body>
 </html>
