--- a/index.html
+++ b/index.html
@@ -1,27 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>My Fluffy Name</title>
-</head>
-<body>
-    <div class="alfon">
-        <p class="alfon-letters letter-a">A</p>
-        <p class="alfon-letters letter-l">L</p>
-        <p class="alfon-letters letter-f">F</p>
-        <p class="alfon-letters letter-o">O</p>
-        <p class="alfon-letters letter-n">N</p>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+		<script>
+		window.addEventListener("DOMContentLoaded",  () => {
+			VANTA.BIRDS({
+			el: "#vanta",
+			mouseControls: true,
+			touchControls: true,
+			gyroControls: true,
+			minHeight: 200.00,
+			minWidth: 200.00,
+			scale: 1.00,
+			scaleMobile: 1.00,
+			backgroundAlpha: 0.0,
+			separation: 100.00,
+			alignment: 77.00,
+			cohesion: 5.00,
+			quantity: 3.00,
+			})
 
-    <div class="alfon-B">
-        <p class="alfon-letters-B letter-a-B">A</p>
-        <p class="alfon-letters-B letter-l-B">L</p>
-        <p class="alfon-letters-B letter-f-B">F</p>
-        <p class="alfon-letters-B letter-o-B">O</p>
-        <p class="alfon-letters-B letter-n-B">N</p>
-    </div>
-</body>
+			setTimeout(() => {
+				const main = document.querySelector('main')
+				main.style.opacity = 1
+				main.style.filter = 'blur(0px)'
+			} , 1000)
+			
+		})
+		</script>
+		<title>Alfonso Sánchez - Links</title>
+	</head>
+	<body>
+		<div id="vanta"></div>
+		<main>
+			<header>
+				<img
+					class="profile"
+					src="/images/Piggycorns Perfil.jpg"
+					alt="imagen perfil"
+				/>
+				<h1>@arfonfo</h1>
+			</header>
+			<ul>
+				<li>
+					<a href="https://arfonfo.github.io/">
+						<img
+							src="/images/homepage.svg"
+							alt="homepage"
+							width="20"
+						/>
+						Official Website
+					</a>
+				</li>
+				<li>
+					<a
+						href="https://www.youtube.com/c/AlfonsoS%C3%A1nchez11/featured"
+					>
+						<img
+							src="/images/youtube.svg"
+							alt="homepage"
+							width="20"
+						/>
+						YouTube
+					</a>
+				</li>
+				<li>
+					<a href="https://twitter.com/arfonfo">
+						<img
+							src="/images/twitter.svg"
+							alt="homepage"
+							width="20"
+						/>
+						Twitter
+					</a>
+				</li>
+				<li>
+					<a href="https://github.com/">
+						<img
+							src="/images/github.svg"
+							alt="homepage"
+							width="20"
+						/>
+						Github
+					</a>
+				</li>
+			</ul>
+		</main>
+	</body>
 </html>
