add options to scale mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
             touchControls: true,
             gyroControls: false,
             minHeight: 200.00,
-            minWidth: 200.00
+            minWidth: 200.00,
+            scale: 1.00,
+			scaleMobile: 1.00,
+			backgroundAlpha: 0.0,
+			separation: 100.00,
+			alignment: 77.00,
+			cohesion: 5.00,
+			quantity: 3.00,
         })
 
         setTimeout(() => {
