--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
             minHeight: 200.00,
             minWidth: 200.00,
             scale: 1.00,
-            scaleMobile: 1.00,
-			backgroundAlpha: 0.0,
-			separation: 100.00,
-			alignment: 77.00,
-			cohesion: 5.00,
-			quantity: 3.00
+            scaleMobile: 1.00
         })
 
         setTimeout(() => {
