--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
+        <link rel="preload" href="images/tree-7317683_1920.jpg" as="image" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
 		<script>
@@ -19,6 +20,8 @@
 			scale: 1.00,
 			scaleMobile: 1.00,
 			backgroundAlpha: 0.0,
+            color2: 0xff00f0,
+            wingSpan: 40.0,
 			separation: 100.00,
 			alignment: 77.00,
 			cohesion: 5.00,
