--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
-        <link rel="preload" href="images/tree-7317683_1920.jpg" as="image" />
+		<link rel="stylesheet" href="/styles.css" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
 		<script>
@@ -20,8 +19,6 @@
 			scale: 1.00,
 			scaleMobile: 1.00,
 			backgroundAlpha: 0.0,
-            color2: 0xff00f0,
-            wingSpan: 40.0,
 			separation: 100.00,
 			alignment: 77.00,
 			cohesion: 5.00,
@@ -40,7 +37,7 @@
 	</head>
 	<body>
 		<div id="vanta"></div>
-		<main>
+		<main class="animated">
 			<header>
 				<img
 					class="profile"
