--- a/index.html
+++ b/index.html
@@ -4,44 +4,28 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/styles.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+		<link rel="stylesheet" href="video.css" />
 		<script>
-		window.addEventListener("DOMContentLoaded",  () => {
-			VANTA.BIRDS({
-			el: "#vanta",
-			mouseControls: true,
-			touchControls: true,
-			gyroControls: true,
-			minHeight: 200.00,
-			minWidth: 200.00,
-			scale: 1.00,
-			scaleMobile: 1.00,
-			backgroundAlpha: 0.0,
-			separation: 100.00,
-			alignment: 77.00,
-			cohesion: 5.00,
-			quantity: 3.00,
-			})
-
-			setTimeout(() => {
+			window.addEventListener("DOMContentLoaded", ()=> {
+				setTimeout(() => {
 				const main = document.querySelector('main')
 				main.style.opacity = 1
 				main.style.filter = 'blur(0px)'
-			} , 1000)
-			
-		})
+				} , 1000)
+			}	
+			)
 		</script>
 		<title>Alfonso Sánchez - Links</title>
 	</head>
 	<body>
-		<div id="vanta"></div>
-		<main class="animated">
+		<video autoplay muted loop playsinline>
+			<source src="/ocean_-_74888 (Original).mp4" type="video/mp4">
+		</video>
+		<main>
 			<header>
 				<img
 					class="profile"
-					src="/images/Piggycorns Perfil.jpg"
+					src="/images/Piggycorns Perfil Alfon 2 mod.jpg"
 					alt="imagen perfil"
 				/>
 				<h1>@arfonfo</h1>
