--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="video.css" />
+		<link rel="stylesheet" href="styles.css" />
 		<script>
 			window.addEventListener("DOMContentLoaded", ()=> {
 				setTimeout(() => {
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<video autoplay muted loop playsinline>
-			<source src="/ocean_-_74888 (Original).mp4" type="video/mp4">
+			<source src="/images/ocean_-_74888 (Original).mp4" type="video/mp4">
 		</video>
 		<main>
 			<header>
