--- a/index.html
+++ b/index.html
@@ -4,23 +4,40 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="/styles.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
 		<script>
-			window.addEventListener("DOMContentLoaded", ()=> {
-				setTimeout(() => {
+		window.addEventListener("DOMContentLoaded",  () => {
+			VANTA.BIRDS({
+			el: "#vanta",
+			mouseControls: true,
+			touchControls: true,
+			gyroControls: true,
+			minHeight: 200.00,
+			minWidth: 200.00,
+			scale: 1.00,
+			scaleMobile: 1.00,
+			color1: 0x5ebb91,
+			backgroundAlpha: 0.0,
+			separation: 100.00,
+			alignment: 77.00,
+			cohesion: 5.00,
+			quantity: 4.00,
+			})
+
+			setTimeout(() => {
 				const main = document.querySelector('main')
 				main.style.opacity = 1
 				main.style.filter = 'blur(0px)'
-				} , 1000)
-			}	
-			)
+			} , 1000)
+			
+		})
 		</script>
 		<title>Alfonso Sánchez - Links</title>
 	</head>
 	<body>
-		<video autoplay muted loop playsinline>
-			<source src="/images/ocean_-_74888 (Original).mp4" type="video/mp4">
-		</video>
+		<div id="vanta"></div>
 		<main>
 			<header>
 				<img
